--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: url("../public/freakyoghoul.jpg");
+  background-image: url("../public/background.jpg");
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
